Fix:     When player can attack notable peasant party
Fix:     When Notable is following player until timeout, when revenge should have ended.
Fix:     When Ai decides not to kill player.
230923 v15.1.1.0
Feature: For version v1.2.4 
Fix: Rare crash fix, when victim prisoner is not found in the mobile party
Fix: incorrect trait selection, when player is dealing with remains (was using lordTraitChangeWhenRansomRemainsDeclined only)
Fix: possible rare crash, when heroes party is null
Fix: possible rare crash, when revenge data collection is updated in events
Feature: Dialogues, when player encounter revenger party, before and after revenger met the hero, who has the criminal as a prisoner.
        Iintimidation dialogs are enabled if player's party strength is higher than revenger's party (see configuration variable peasantRevengerIntimidationPowerScale)
        Player traits will change according to lordTraitChangeWhenLordExecuteRevengerAfterOrBeforeQuest, when notable is executed.
Feature: added peasantRevengePartyTalkToLordDistance so you can change distance from where notable will start talking to hero.
231022 v15.1.1.2
Fix: Notable dialogue string for translations
231022 v15.1.1.3
Fix: Notable dialogue strings
Fix: Crash after selecting Polish language
Feature: Do not removing notable party after notable execution
231024 v15.1.1.4
Feature: Player can persuade the notable peasants not to initiate the revenges
Feature: Added configuration parameter enableOtherNobleTraitsChangeAfterNobleExecution (default value is true).
         If this value is false, traits of other notables will not change due another notable peasant execution in the same village.
Feature: Added configuration parameter lordTraitChangeWhenLordPersuedeNotableNotToRevenge
         Added configuration parameter lordTraitChangeWhenLordPersuedeNotableToRevenge
         Purpose of the persuasion will influence your hero traits accordingly.
